--- a/index.html
+++ b/index.html
@@ -85,6 +85,21 @@
       <div class="price">—</div>
     </div>
   </div>
+
+  <div class="card" data-name="" data-status="" data-storage="">
+    <div class="img-wrap"><div class="no-img">Sin imagen</div></div>
+    <div class="body">
+      <div class="row">
+        <h3></h3>
+        
+      </div>
+      <div class="meta">
+        <span><strong>Almacenamiento:</strong> —</span>
+        <span><strong>Batería:</strong> —</span>
+      </div>
+      <div class="price">—</div>
+    </div>
+  </div>
   </div>
 </main>
 <footer>
