--- a/index.html
+++ b/index.html
@@ -5,29 +5,141 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Catálogo | Actualizado automático</title>
 <style>
-  :root { --bg:#0b0c10; --panel:#121318; --muted:#8a8f98; --text:#e7e9ee; --accent:#4f7cff; --ok:#24c17a; }
-  *{box-sizing:border-box}
-  body{margin:0; background:var(--bg); color:var(--text); font-family:ui-sans-serif,system-ui,Segoe UI,Roboto,Helvetica,Arial}
-  header{position:sticky; top:0; z-index:10; backdrop-filter:saturate(1.2) blur(8px); background:rgba(11,12,16,.6); border-bottom:1px solid #1e2130}
-  .wrap{max-width:1100px; margin:0 auto; padding:18px 16px;}
-  h1{margin:0; font-size:20px; letter-spacing:.2px}
-  .controls{display:grid; grid-template-columns:1fr 180px 180px; gap:10px; margin-top:10px}
-  input[type="search"], select{
-    background:var(--panel); border:1px solid #1e2130; color:var(--text);
-    padding:10px 12px; border-radius:10px; outline:none;
+  /* ======== Apple-like look & feel (solo diseño) ======== */
+  :root{
+    --bg: #fff;
+    --panel: #f5f5f7;   /* gris Apple */
+    --panel-2:#ffffff;
+    --line: #e5e5ea;
+    --text:#1d1d1f;     /* “Apple Black” */
+    --muted:#6e6e73;
+    --accent:#0071e3;   /* Apple Blue */
+    --ok:#1d1d1f;       /* precio en negro (más “Apple”) */
+    --radius: 18px;
   }
-  main .grid{display:grid; gap:14px; grid-template-columns:repeat(auto-fill, minmax(230px,1fr)); padding:16px}
-  .card{background:var(--panel); border:1px solid #1c2030; border-radius:16px; overflow:hidden; display:flex; flex-direction:column}
-  .img-wrap{aspect-ratio: 1.3/1; background:#0f1118; display:flex; align-items:center; justify-content:center}
-  .img-wrap img{width:100%; height:100%; object-fit:cover}
+
+  *{box-sizing:border-box}
+  html,body{height:100%}
+  body{
+    margin:0;
+    background:var(--bg);
+    color:var(--text);
+    font-family:-apple-system,BlinkMacSystemFont,"SF Pro Text","SF Pro Display",Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale;
+  }
+
+  /* Header translúcido, limpio */
+  header{
+    position:sticky; top:0; z-index:10;
+    backdrop-filter:saturate(1.2) blur(12px);
+    background:rgba(255,255,255,.75);
+    border-bottom:1px solid var(--line);
+  }
+  .wrap{max-width:1200px; margin:0 auto; padding:14px 18px;}
+  h1{margin:0; font-size:18px; font-weight:600; letter-spacing:.2px}
+
+  /* Controles estilo pill */
+  .controls{
+    display:grid; grid-template-columns:1fr 180px 180px; gap:10px; margin-top:10px;
+  }
+  input[type="search"], select{
+    background:var(--panel);
+    border:1px solid var(--line);
+    color:var(--text);
+    padding:12px 14px;
+    border-radius:999px;
+    outline:none;
+    font-size:14px;
+    transition:border-color .2s, background-color .2s, box-shadow .2s;
+  }
+  input[type="search"]::placeholder{color:var(--muted)}
+  input[type="search"]:focus, select:focus{
+    border-color:var(--accent);
+    box-shadow:0 0 0 4px rgba(0,113,227,.12);
+    background:var(--panel-2);
+  }
+
+  /* Grid aireado */
+  main .grid{
+    display:grid; gap:18px;
+    grid-template-columns:repeat(auto-fill, minmax(260px,1fr));
+    padding:24px 18px 36px;
+    max-width:1200px; margin:0 auto;
+  }
+
+  /* Tarjeta minimalista */
+  .card{
+    background:var(--panel-2);
+    border:1px solid var(--line);
+    border-radius:var(--radius);
+    overflow:hidden;
+    display:flex; flex-direction:column;
+    transition:transform .2s ease, box-shadow .2s ease;
+    box-shadow:0 1px 0 rgba(0,0,0,.03);
+  }
+  .card:hover{
+    transform:translateY(-2px);
+    box-shadow:0 10px 24px rgba(0,0,0,.06);
+  }
+
+  /* Imagen con fondo claro y objeto contenido (estilo producto) */
+  .img-wrap{
+    aspect-ratio: 1 / 1;
+    background:var(--panel);
+    display:flex; align-items:center; justify-content:center;
+    border-bottom:1px solid var(--line);
+  }
+  .img-wrap img{
+    width:88%; height:88%; object-fit:contain; /* clave para look Apple */
+    image-rendering:auto;
+  }
   .no-img{color:var(--muted); font-size:14px}
-  .body{padding:12px}
-  .row{display:flex; align-items:center; justify-content:space-between; gap:8px}
-  h3{font-size:16px; margin:0}
-  .badge{background:#1b2030; border:1px solid #2a3147; color:#a7b3d1; font-size:12px; padding:4px 8px; border-radius:999px}
-  .meta{display:flex; gap:12px; color:var(--muted); font-size:13px; margin:8px 0}
-  .price{font-size:18px; font-weight:700; color:var(--ok)}
-  footer{color:var(--muted); font-size:12px; text-align:center; padding:20px}
+
+  .body{padding:16px 16px 18px}
+  .row{
+    display:flex; align-items:center; justify-content:space-between; gap:10px;
+    margin-bottom:6px;
+  }
+  h3{font-size:16px; line-height:1.25; margin:0; font-weight:600;}
+  .badge{
+    background:#f2f2f7;
+    border:1px solid var(--line);
+    color:#3a3a3c;
+    font-size:12px;
+    padding:4px 10px;
+    border-radius:999px;
+    white-space:nowrap;
+  }
+
+  .meta{
+    display:flex; gap:14px; flex-wrap:wrap;
+    color:var(--muted); font-size:13px; margin:8px 0 10px;
+  }
+  .meta span{display:flex; gap:6px; align-items:baseline}
+  .meta strong{font-weight:600; color:#3a3a3c}
+
+  .price{
+    font-size:20px; font-weight:700; color:var(--ok);
+    margin-top:4px;
+  }
+
+  footer{
+    color:var(--muted); font-size:12px; text-align:center; padding:22px 18px; border-top:1px solid var(--line);
+    background:var(--panel);
+  }
+
+  /* Estados (opcional, solo visual) */
+  [data-status="vendido"] .badge{background:#fff0f0; color:#b00020; border-color:#ffd6d6}
+  [data-status="reservado"] .badge{background:#fff8e1; color:#8a6d1f; border-color:#ffe8a3}
+  [data-status="disponible"] .badge{background:#e7f7ee; color:#1b6f43; border-color:#cdebdc}
+
+  /* Responsivo */
+  @media (max-width: 820px){
+    .controls{grid-template-columns:1fr; gap:8px}
+    main .grid{grid-template-columns:repeat(auto-fill, minmax(220px,1fr)); padding:18px 12px 28px;}
+    .wrap{padding:12px}
+  }
 </style>
 </head>
 <body>
