--- a/index.html
+++ b/index.html
@@ -6,17 +6,10 @@
 <title>Catálogo | Actualizado automático</title>
 <style>
   :root{
-    /* PALETA VERDE */
-    --bg:#d1fae5;        /* fondo general verde suave */
-    --surface:#ffffff;   /* tarjetas blancas */
-    --surface-2:#e8f5e9; /* inputs / "Sin imagen" con verde muy claro */
-    --line:#cfe6d6;      /* líneas con tinte verde */
-    --ink:#0f2a20;       /* texto principal */
-    --muted:#557a69;     /* texto secundario */
-    --accent:#059669;    /* acento verde */
-
+    --bg:#fff; --surface:#fff; --surface-2:#f5f5f7; --line:#e6e6e9;
+    --ink:#1d1d1f; --muted:#6e6e73; --accent:#0071e3;
     --radius:12px;
-    --thumb:74px;        /* miniatura en móvil; bajalo a 68/64 para más densidad */
+    --thumb:74px;                 /* miniatura; bajalo a 68/64 para más densidad */
     --fs-h1:20px; --fs-name:14px; --fs-price:16px; --fs-body:13px;
   }
   *{box-sizing:border-box} html,body{height:100%}
@@ -24,9 +17,8 @@
         font-family:-apple-system,BlinkMacSystemFont,"SF Pro Text","SF Pro Display",Segoe UI,Roboto,Helvetica,Arial,sans-serif; }
 
   header{
-    position:sticky; top:0; z-index:10;
-    background:var(--bg); border-bottom:1px solid var(--line);
-    backdrop-filter:saturate(1.1) blur(6px);
+    position:sticky; top:0; z-index:10; backdrop-filter:saturate(1.2) blur(8px);
+    background:rgba(255,255,255,.92); border-bottom:1px solid var(--line);
   }
   .wrap{max-width:1200px; margin:0 auto; padding:10px 12px;}
   h1{margin:0; font-size:var(--fs-h1); font-weight:800}
@@ -40,63 +32,70 @@
   }
   input[type="search"]::placeholder{color:var(--muted)}
 
-  /* === MÓVIL: LISTA COMPACTA HORIZONTAL === */
+  /* === MÓVIL: LISTA COMPACTA HORIZONTAL (forzado con !important) === */
   main .grid{
     display:grid; grid-template-columns:1fr; gap:8px; padding:10px; max-width:100%;
   }
   .card{
     background:var(--surface); border:1px solid var(--line); border-radius:var(--radius);
-    display:grid; grid-template-columns:var(--thumb) 1fr; align-items:center;
-    min-height: calc(var(--thumb) + 14px);
+    display:grid !important; grid-template-columns:var(--thumb) 1fr !important; align-items:center !important;
+    min-height: calc(var(--thumb) + 14px) !important;   /* apaisada */
     transition:border-color .2s, box-shadow .2s;
   }
-  .card:hover{ border-color:#bfe0cc; box-shadow:0 6px 14px rgba(0,0,0,.05); }
+  .card:hover{ border-color:#d9d9df; box-shadow:0 6px 14px rgba(0,0,0,.05); }
 
   .img-wrap{
-    width:var(--thumb); height:var(--thumb);
+    width:var(--thumb) !important; height:var(--thumb) !important; aspect-ratio:auto !important;
     display:flex; align-items:center; justify-content:center;
-    background:var(--surface-2); border-right:1px solid var(--line);
+    background:var(--surface-2) !important; border-right:1px solid var(--line) !important; border-bottom:0 !important;
     border-top-left-radius:var(--radius); border-bottom-left-radius:var(--radius);
   }
-  .img-wrap img{ width:86%; height:86%; object-fit:contain; }
+  .img-wrap img{ width:86% !important; height:86% !important; object-fit:contain !important; }
   .no-img{ color:var(--muted); font-size:12px; }
 
-  .body{ padding:8px 10px; display:flex; flex-direction:column; gap:2px; }
-  .top{ display:flex; align-items:center; justify-content:space-between; gap:8px; }
+  .body{ padding:8px 10px !important; display:flex; flex-direction:column; gap:2px; }
+  .top{ display:flex !important; align-items:center !important; justify-content:space-between !important; gap:8px !important; }
   .name{
-    font-size:var(--fs-name); line-height:1.15; margin:0; font-weight:800; color:#0b261d;
-    display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical; overflow:hidden;
+    font-size:var(--fs-name) !important; line-height:1.15 !important; margin:0 !important; font-weight:800 !important; color:#000 !important;
+    display:-webkit-box !important; -webkit-line-clamp:2 !important; -webkit-box-orient:vertical !important; overflow:hidden !important;
   }
   .badge{
-    background:#eefcf5; border:1px solid var(--line); color:#0f5132;
+    background:#f2f2f7; border:1px solid var(--line); color:#3a3a3c;
     font-size:11px; padding:3px 8px; border-radius:999px; white-space:nowrap; flex-shrink:0;
   }
-  .price-line{ display:flex; align-items:baseline; gap:8px; }
-  .price{ font-size:var(--fs-price); font-weight:800; color:#0b261d; }
-  .cuotas{ font-size:12px; color:#0f5132; font-weight:600; }
-  .meta{ font-size:12px; color:var(--muted); white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
+  .price-line{ display:flex !important; align-items:baseline !important; gap:8px !important; }
+  .price{ font-size:var(--fs-price) !important; font-weight:800 !important; color:#000 !important; }
+  .cuotas{ font-size:12px !important; color:#1b6f43 !important; font-weight:600 !important; }
+  .meta{ font-size:12px !important; color:var(--muted) !important; white-space:nowrap !important; overflow:hidden !important; text-overflow:ellipsis !important; }
+
+  /* Ocultamos chips/CTAs en móvil para máxima densidad */
+  .specs, .cta-row{ display:none !important; }
 
   /* === TABLET/ESCRITORIO: volver a grid de cards verticales === */
   @media (min-width:768px){
     main .grid{
-      grid-template-columns:repeat(3, minmax(0, 1fr));
-      gap:16px; padding:16px; max-width:1200px; margin:0 auto;
+      grid-template-columns:repeat(3, minmax(0, 1fr)); gap:16px; padding:16px; max-width:1200px; margin:0 auto;
     }
-    .card{ grid-template-columns:1fr; min-height:auto; }
+    .card{
+      display:flex !important; flex-direction:column !important; min-height:auto !important;
+    }
     .img-wrap{
-      width:auto; height:auto; aspect-ratio:1/1; border-right:none; border-bottom:1px solid var(--line);
+      width:auto !important; height:auto !important; aspect-ratio:1/1 !important;
+      border-right:0 !important; border-bottom:1px solid var(--line) !important;
       border-top-left-radius:var(--radius); border-bottom-left-radius:0;
     }
-    .body{ padding:12px 14px; gap:6px; }
-    .meta{ white-space:normal; }
+    .body{ padding:12px 14px !important; gap:6px !important; }
+    .meta{ white-space:normal !important; }
+    .specs{ display:flex !important; flex-wrap:wrap; gap:8px; }
+    .cta-row{ display:flex !important; gap:10px; }
   }
 
   /* Estados por color (opcional) */
-  [data-status="vendido"] .badge{ background:#ffe7e7; color:#b00020; border-color:#ffc7c7; }
-  [data-status="reservado"] .badge{ background:#fff7da; color:#8a6d1f; border-color:#ffe8a3; }
-  [data-status="disponible"] .badge{ background:#dbf7eb; color:#1b6f43; border-color:#cdebdc; }
+  [data-status="vendido"] .badge{ background:#fff0f0; color:#b00020; border-color:#ffd6d6; }
+  [data-status="reservado"] .badge{ background:#fff8e1; color:#8a6d1f; border-color:#ffe8a3; }
+  [data-status="disponible"] .badge{ background:#e7f7ee; color:#1b6f43; border-color:#cdebdc; }
 
-  footer{ color:#2f5445; font-size:12px; text-align:center; padding:16px 12px; border-top:1px solid var(--line); background:var(--surface-2); }
+  footer{ color:var(--muted); font-size:12px; text-align:center; padding:16px 12px; border-top:1px solid var(--line); background:var(--surface-2); }
 </style>
 </head>
 <body>
