--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
 <title>Catálogo | Actualizado automático</title>
 <style>
   :root{
-    /* PALETA VERDE */
-    --bg:#d1fae5;        /* fondo general verde suave */
-    --surface:#ffffff;   /* tarjetas blancas */
-    --surface-2:#e8f5e9; /* inputs / "Sin imagen" con verde muy claro */
-    --line:#cfe6d6;      /* líneas con tinte verde */
-    --ink:#0f2a20;       /* texto principal */
-    --muted:#557a69;     /* texto secundario */
-    --accent:#059669;    /* acento verde */
+    /* PALETA PRINCIPAL (blancos/grises) */
+    --bg:#ffffff;        /* fondo de la página */
+    --surface:#ffffff;   /* fondo tarjetas */
+    --surface-2:#f5f5f7; /* inputs / gris leve */
+    --line:#e6e6e9;
+    --ink:#1d1d1f; --muted:#6e6e73; --accent:#0071e3;
 
     --radius:12px;
-    --thumb:74px;        /* miniatura en móvil; bajalo a 68/64 para más densidad */
+    --thumb:74px;        /* miniatura en móvil (bajalo a 68/64 si querés aún más compacto) */
     --fs-h1:20px; --fs-name:14px; --fs-price:16px; --fs-body:13px;
   }
   *{box-sizing:border-box} html,body{height:100%}
@@ -25,7 +23,7 @@
 
   header{
     position:sticky; top:0; z-index:10;
-    background:var(--bg); border-bottom:1px solid var(--line);
+    background:rgba(255,255,255,.92); border-bottom:1px solid var(--line);
     backdrop-filter:saturate(1.1) blur(6px);
   }
   .wrap{max-width:1200px; margin:0 auto; padding:10px 12px;}
@@ -40,17 +38,15 @@
   }
   input[type="search"]::placeholder{color:var(--muted)}
 
-  /* === MÓVIL: LISTA COMPACTA HORIZONTAL === */
-  main .grid{
-    display:grid; grid-template-columns:1fr; gap:8px; padding:10px; max-width:100%;
-  }
+  /* === MÓVIL: lista horizontal compacta (tarjetas más anchas que altas) === */
+  main .grid{ display:grid; grid-template-columns:1fr; gap:8px; padding:10px; max-width:100%; }
   .card{
     background:var(--surface); border:1px solid var(--line); border-radius:var(--radius);
     display:grid; grid-template-columns:var(--thumb) 1fr; align-items:center;
     min-height: calc(var(--thumb) + 14px);
     transition:border-color .2s, box-shadow .2s;
   }
-  .card:hover{ border-color:#bfe0cc; box-shadow:0 6px 14px rgba(0,0,0,.05); }
+  .card:hover{ border-color:#dedee2; box-shadow:0 6px 14px rgba(0,0,0,.05); }
 
   .img-wrap{
     width:var(--thumb); height:var(--thumb);
@@ -64,39 +60,33 @@
   .body{ padding:8px 10px; display:flex; flex-direction:column; gap:2px; }
   .top{ display:flex; align-items:center; justify-content:space-between; gap:8px; }
   .name{
-    font-size:var(--fs-name); line-height:1.15; margin:0; font-weight:800; color:#0b261d;
+    font-size:var(--fs-name); line-height:1.15; margin:0; font-weight:800; color:#000;
     display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical; overflow:hidden;
   }
   .badge{
-    background:#eefcf5; border:1px solid var(--line); color:#0f5132;
+    background:#f2f2f7; border:1px solid var(--line); color:#3a3a3c;
     font-size:11px; padding:3px 8px; border-radius:999px; white-space:nowrap; flex-shrink:0;
   }
   .price-line{ display:flex; align-items:baseline; gap:8px; }
-  .price{ font-size:var(--fs-price); font-weight:800; color:#0b261d; }
-  .cuotas{ font-size:12px; color:#0f5132; font-weight:600; }
+  .price{ font-size:var(--fs-price); font-weight:800; color:#000; }
+  .cuotas{ font-size:12px; color:#1b6f43; font-weight:600; }
   .meta{ font-size:12px; color:var(--muted); white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
 
-  /* === TABLET/ESCRITORIO: volver a grid de cards verticales === */
+  /* === TABLET/ESCRITORIO: grid de cards verticales === */
   @media (min-width:768px){
-    main .grid{
-      grid-template-columns:repeat(3, minmax(0, 1fr));
-      gap:16px; padding:16px; max-width:1200px; margin:0 auto;
-    }
+    main .grid{ grid-template-columns:repeat(3, minmax(0, 1fr)); gap:16px; padding:16px; max-width:1200px; margin:0 auto; }
     .card{ grid-template-columns:1fr; min-height:auto; }
-    .img-wrap{
-      width:auto; height:auto; aspect-ratio:1/1; border-right:none; border-bottom:1px solid var(--line);
-      border-top-left-radius:var(--radius); border-bottom-left-radius:0;
-    }
+    .img-wrap{ width:auto; height:auto; aspect-ratio:1/1; border-right:none; border-bottom:1px solid var(--line); border-top-left-radius:var(--radius); border-bottom-left-radius:0; }
     .body{ padding:12px 14px; gap:6px; }
     .meta{ white-space:normal; }
   }
 
-  /* Estados por color (opcional) */
-  [data-status="vendido"] .badge{ background:#ffe7e7; color:#b00020; border-color:#ffc7c7; }
-  [data-status="reservado"] .badge{ background:#fff7da; color:#8a6d1f; border-color:#ffe8a3; }
-  [data-status="disponible"] .badge{ background:#dbf7eb; color:#1b6f43; border-color:#cdebdc; }
+  /* Colores de estado (opcional) */
+  [data-status="vendido"] .badge{ background:#fff0f0; color:#b00020; border-color:#ffd6d6; }
+  [data-status="reservado"] .badge{ background:#fff8e1; color:#8a6d1f; border-color:#ffe8a3; }
+  [data-status="disponible"] .badge{ background:#e7f7ee; color:#1b6f43; border-color:#cdebdc; }
 
-  footer{ color:#2f5445; font-size:12px; text-align:center; padding:16px 12px; border-top:1px solid var(--line); background:var(--surface-2); }
+  footer{ color:#6e6e73; font-size:12px; text-align:center; padding:16px 12px; border-top:1px solid var(--line); background:var(--surface-2); }
 </style>
 </head>
 <body>
@@ -122,13 +112,8 @@
 <main>
   <div class="grid" id="grid">
     
-  <div class="card"
-       data-name="iphone 14"
-       data-status=""
-       data-storage="—">
-
-    <div class="img-wrap"><div class="no-img">Sin imagen</div></div>
-
+  <div class="card" data-name="iphone 14" data-status="" data-storage="—">
+    <div class="img-wrap"><img src="https://www.macstation.com.ar/web/image/product.template/98603/image_256/iPhone%2014" alt="iphone 14" loading="lazy" /></div>
     <div class="body">
       <div class="top">
         <h3 class="name" title="iphone 14">iphone 14</h3>
@@ -142,13 +127,8 @@
     </div>
   </div>
 
-  <div class="card"
-       data-name="iphone 13"
-       data-status=""
-       data-storage="—">
-
-    <div class="img-wrap"><div class="no-img">Sin imagen</div></div>
-
+  <div class="card" data-name="iphone 13" data-status="" data-storage="—">
+    <div class="img-wrap"><img src="https://www.macstation.com.ar/web/image/product.template/98604/image_256/iPhone%2013" alt="iPhone 13" loading="lazy" /></div>
     <div class="body">
       <div class="top">
         <h3 class="name" title="iPhone 13">iPhone 13</h3>
@@ -162,13 +142,8 @@
     </div>
   </div>
 
-  <div class="card"
-       data-name="iphone 11"
-       data-status=""
-       data-storage="—">
-
+  <div class="card" data-name="iphone 11" data-status="" data-storage="—">
     <div class="img-wrap"><div class="no-img">Sin imagen</div></div>
-
     <div class="body">
       <div class="top">
         <h3 class="name" title="Iphone 11">Iphone 11</h3>
