--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   :root{
     --bg:#ffffff; --surface:#ffffff; --surface-2:#f5f5f7; --line:#e6e6e9;
     --ink:#1d1d1f; --muted:#6e6e73; --accent:#0071e3;
-    --radius:14px; --gap:10px; --card-h-sm: 200px;
+    --radius:14px; --gap:8px; --card-h-sm: 260px; /* +alto para foto grande en móvil */
   }
   *{box-sizing:border-box} html,body{height:100%}
   body{ margin:0; background:var(--bg); color:var(--ink);
@@ -63,6 +63,18 @@
   [data-status="vendido"] .status{ background:#fff0f0; color:#b00020; border-color:#ffd6d6; }
   [data-status="reservado"] .status{ background:#fff8e1; color:#8a6d1f; border-color:#ffe8a3; }
   [data-status="disponible"] .status{ background:#e7f7ee; color:#1b6f43; border-color:#cdebdc; }
+
+  /* —— Mejora móvil: foto más grande y textos más compactos —— */
+  @media (max-width: 430px){
+    main .grid{ gap:8px; }
+    .img{ flex:1 1 75%; }
+    .img img{ width:95%; height:95%; }
+    .info{ flex:1 1 25%; padding:8px 8px 10px; gap:4px; }
+    .name{ font-size:14px; }
+    .price{ font-size:16px; }
+    .chip{ font-size:11px; padding:4px 7px; }
+    .dot{ width:9px; height:9px; }
+  }
 
   /* POPUP beneficios */
   .overlay{ position:fixed; inset:0; background:rgba(0,0,0,.45); display:none; align-items:center; justify-content:center; z-index:40; }
