--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     --bg:#ffffff; --surface:#ffffff; --surface-2:#f5f5f7; --line:#e6e6e9;
     --ink:#1d1d1f; --muted:#6e6e73; --accent:#0071e3;
     --radius:14px; --gap:10px;
-    /* IMAGEN GRANDE sin romper layout */
-    --card-h-sm: 280px;
   }
   *{box-sizing:border-box} html,body{height:100%}
   body{ margin:0; background:var(--bg); color:var(--ink);
@@ -43,15 +41,15 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
   .hero{ max-width:1200px; margin:10px auto 0; padding:8px 12px 0; }
   .hero h1{ margin:0; font-size:28px; line-height:1.1; font-weight:800; }
 
-  /* GRID */
+  /* GRID: altura AUTO para que entren los chips */
   main .grid{
     display:grid; gap:var(--gap);
     grid-template-columns:repeat(2, minmax(0, 1fr));
-    grid-auto-rows: var(--card-h-sm);
+    grid-auto-rows:auto;               /* ⬅️  antes fijo, ahora auto */
     padding:10px; max-width:1200px; margin:0 auto;
   }
   @media (min-width:600px){ main .grid{ grid-template-columns:repeat(3, minmax(0, 1fr)); } }
-  @media (min-width:992px){ main .grid{ grid-template-columns:repeat(4, minmax(0, 1fr)); grid-auto-rows:auto; } }
+  @media (min-width:992px){ main .grid{ grid-template-columns:repeat(4, minmax(0, 1fr)); } }
 
   /* CARD */
   .card{
@@ -63,23 +61,25 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
   .card:hover{ transform:translateY(-2px); box-shadow:0 12px 26px rgba(0,0,0,.06); border-color:#dcdde2; }
   .card-hit{ position:absolute; inset:0; border:0; background:transparent; cursor:pointer; }
 
-  /* Imagen predominante, con proporción cuidada */
+  /* Imagen grande con altura fija razonable; el resto fluye */
   .img{
     position:relative;
     background:var(--surface-2);
     display:flex; align-items:center; justify-content:center;
-    flex:1 1 64%;
-    min-height:190px;
+    flex:0 0 210px;         /* ⬅️  altura visual de la imagen en móvil */
+    min-height:210px;
   }
   .img img{
     max-width:95%;
-    max-height:88%;
+    max-height:90%;
     width:auto; height:auto;
     object-fit:contain;
   }
-  @media (max-width:420px){
-    :root{ --card-h-sm: 300px; }
-    .img{ min-height:210px; }
+  @media (min-width:600px){
+    .img{ flex:0 0 200px; min-height:200px; }
+  }
+  @media (min-width:992px){
+    .img{ flex:0 0 180px; min-height:180px; }
   }
 
   .no-img{ color:var(--muted); font-size:13px; }
@@ -87,14 +87,13 @@ src="https://www.facebook.com/tr?id=650415544428771&ev=PageView&noscript=1"
     position:absolute; top:8px; left:8px; padding:4px 10px; border-radius:999px;
     background:#f2f2f7; border:1px solid var(--line); color:#3a3a3c; font-size:11px; font-weight:600;
   }
-  /* Pill sutil (NO diagonal) */
   .off-badge{
     position:absolute; top:10px; right:10px; padding:6px 10px;
     background:#ff3b30; color:#fff; font-size:12px; font-weight:800; border-radius:999px;
     box-shadow:0 2px 8px rgba(255,59,48,.25); pointer-events:none;
   }
 
-  .info{ flex:1 1 36%; padding:10px 10px 12px; display:flex; flex-direction:column; gap:6px; }
+  .info{ padding:10px 10px 12px; display:flex; flex-direction:column; gap:6px; }
   .name{ margin:0; font-weight:800; font-size:15px; line-height:1.15;
     display:-webkit-box; -webkit-line-clamp:1; -webkit-box-orient:vertical; overflow:hidden; }
   .price{ font-size:18px; font-weight:800; color:#000; }
