update: catálogo auto

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
 </nav>
 
 <div class="xmas-banner">
-  <span>🎄 Especial Navidad: 12 cuotas fijas en iPhones seleccionados + combos listos para regalo 🎁</span>
+  <span>🎄 Especial Navidad: 12 cuotas fijas + 51.8% OFF pagando en efectivo 🎁</span>
 </div>
 
 <section class="hero">
@@ -361,12 +361,12 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 13"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98604/image_256/iPhone%2013" alt="iPhone 13" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 13">iPhone 13</h3>
       <div class="price">12 cuotas de $ 89.048</div>
-      <div class="sub cuotas-hint">Ver más opciones de cuotas</div>
+      <div class="sub cuotas-hint">Se entrega con funda, cargador, cable y vidrio templado</div>
       <div class="meta">
         <span class="chip"><i class="dot" style="--dot:#111827"></i>Negro</span><span class="chip"><i class="dot" style="--dot:#9ca3af"></i>128GB</span><span class="chip"><i class="dot" style="--dot:hsl(108 70% 45%)"></i>90%</span>
       </div>
@@ -381,12 +381,12 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 13"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98604/image_256/iPhone%2013" alt="iPhone 13" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 13">iPhone 13</h3>
       <div class="price">12 cuotas de $ 76.680</div>
-      <div class="sub cuotas-hint">Ver más opciones de cuotas</div>
+      <div class="sub cuotas-hint">Se entrega con funda, cargador, cable y vidrio templado</div>
       <div class="meta">
         <span class="chip"><i class="dot" style="--dot:#111827"></i>Negro</span><span class="chip"><i class="dot" style="--dot:#9ca3af"></i>128GB</span><span class="chip"><i class="dot" style="--dot:hsl(102 70% 45%)"></i>85%</span>
       </div>
@@ -401,12 +401,12 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 13"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98604/image_256/iPhone%2013" alt="iPhone 13" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 13">iPhone 13</h3>
       <div class="price">12 cuotas de $ 76.680</div>
-      <div class="sub cuotas-hint">Ver más opciones de cuotas</div>
+      <div class="sub cuotas-hint">Se entrega con funda, cargador, cable y vidrio templado</div>
       <div class="meta">
         <span class="chip"><i class="dot" style="--dot:#111827"></i>Negro</span><span class="chip"><i class="dot" style="--dot:#9ca3af"></i>128GB</span><span class="chip"><i class="dot" style="--dot:hsl(102 70% 45%)"></i>85%</span>
       </div>
@@ -421,12 +421,12 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 13 Pro Max"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98604/image_256/iPhone%2013" alt="iPhone 13 Pro Max" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 13 Pro Max">iPhone 13 Pro Max</h3>
       <div class="price">12 cuotas de $ 160.782</div>
-      <div class="sub cuotas-hint">Ver más opciones de cuotas</div>
+      <div class="sub cuotas-hint">Se entrega con funda, cargador, cable y vidrio templado</div>
       <div class="meta">
         <span class="chip"><i class="dot" style="--dot:#d1d5db"></i>Celeste</span><span class="chip"><i class="dot" style="--dot:#9ca3af"></i>128GB</span><span class="chip"><i class="dot" style="--dot:hsl(113 70% 45%)"></i>94%</span>
       </div>
@@ -441,12 +441,12 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 15"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98601/image_256/iPhone%2015" alt="iPhone 15" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 15">iPhone 15</h3>
       <div class="price">12 cuotas de $ 155.835</div>
-      <div class="sub cuotas-hint">Ver más opciones de cuotas</div>
+      <div class="sub cuotas-hint">Se entrega con funda, cargador, cable y vidrio templado</div>
       <div class="meta">
         <span class="chip"><i class="dot" style="--dot:#111827"></i>Negro</span><span class="chip"><i class="dot" style="--dot:#9ca3af"></i>128GB</span><span class="chip"><i class="dot" style="--dot:hsl(118 70% 45%)"></i>98%</span>
       </div>
@@ -461,12 +461,12 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 15 Pro"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98601/image_256/iPhone%2015" alt="iPhone 15 Pro" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 15 Pro">iPhone 15 Pro</h3>
       <div class="price">12 cuotas de $ 173.149</div>
-      <div class="sub cuotas-hint">Ver más opciones de cuotas</div>
+      <div class="sub cuotas-hint">Se entrega con funda, cargador, cable y vidrio templado</div>
       <div class="meta">
         <span class="chip"><i class="dot" style="--dot:#111827"></i>Negro</span><span class="chip"><i class="dot" style="--dot:#9ca3af"></i>128GB</span><span class="chip"><i class="dot" style="--dot:hsl(107 70% 45%)"></i>89%</span>
       </div>
@@ -481,12 +481,12 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 15 Pro Max"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98601/image_256/iPhone%2015" alt="iPhone 15 Pro Max" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 15 Pro Max">iPhone 15 Pro Max</h3>
       <div class="price">12 cuotas de $ 225.094</div>
-      <div class="sub cuotas-hint">Ver más opciones de cuotas</div>
+      <div class="sub cuotas-hint">Se entrega con funda, cargador, cable y vidrio templado</div>
       <div class="meta">
         <span class="chip"><i class="dot" style="--dot:#f9fafb"></i>Blanco</span><span class="chip"><i class="dot" style="--dot:#9ca3af"></i>256GB</span><span class="chip"><i class="dot" style="--dot:hsl(106 70% 45%)"></i>88%</span>
       </div>
@@ -501,12 +501,12 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 16 Pro Max"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98593/image_256/iPhone%2016%20Pro" alt="iPhone 16 Pro Max" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 16 Pro Max">iPhone 16 Pro Max</h3>
       <div class="price">12 cuotas de $ 311.669</div>
-      <div class="sub cuotas-hint">Ver más opciones de cuotas</div>
+      <div class="sub cuotas-hint">Se entrega con funda, cargador, cable y vidrio templado</div>
       <div class="meta">
         <span class="chip"><i class="dot" style="--dot:#d1d5db"></i>Gris</span><span class="chip"><i class="dot" style="--dot:#9ca3af"></i>256GB</span><span class="chip"><i class="dot" style="--dot:hsl(120 70% 45%)"></i>100%</span>
       </div>
@@ -540,7 +540,7 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
   <div class="modal detail" role="dialog" aria-labelledby="d-title" aria-modal="true">
     <button class="close-x" id="d-close" aria-label="Cerrar">×</button>
     <div class="detail-media">
-      <span class="detail-off">Especial Navidad</span>
+      <span class="detail-off">Especial Navidad · 51.8% OFF efectivo</span>
       <img id="d-img" alt="Producto" />
     </div>
     <div class="detail-body">
