update: catálogo auto

--- a/index.html
+++ b/index.html
@@ -180,11 +180,32 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     position:absolute; top:8px; left:8px; padding:4px 10px; border-radius:999px;
     background:#fef3c7; border:1px solid #facc15; color:#92400e; font-size:11px; font-weight:600;
   }
+
   .off-badge{
-    position:absolute; top:10px; right:10px; padding:6px 10px;
+    position:absolute;
+    top:10px;
+    right:10px;
+    padding:6px 12px;
     background:#b91c1c;
-    color:#fff; font-size:12px; font-weight:800; border-radius:999px;
-    box-shadow:0 2px 8px rgba(185,28,28,.35); pointer-events:none;
+    color:#fff;
+    font-size:12px;
+    font-weight:800;
+    border-radius:999px;
+    box-shadow:0 2px 8px rgba(185,28,28,.35);
+    pointer-events:none;
+  }
+  .cash-badge{
+    position:absolute;
+    top:40px;
+    right:10px;
+    padding:4px 10px;
+    background:#fef3c7;
+    color:#92400e;
+    font-size:11px;
+    font-weight:700;
+    border-radius:999px;
+    box-shadow:0 1px 4px rgba(0,0,0,.12);
+    pointer-events:none;
   }
 
   .info{ padding:10px 10px 12px; display:flex; flex-direction:column; gap:6px; }
@@ -361,7 +382,8 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 13"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98604/image_256/iPhone%2013" alt="iPhone 13" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
+      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="cash-badge" aria-hidden="true">51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 13">iPhone 13</h3>
@@ -381,7 +403,8 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 13"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98604/image_256/iPhone%2013" alt="iPhone 13" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
+      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="cash-badge" aria-hidden="true">51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 13">iPhone 13</h3>
@@ -401,7 +424,8 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 13"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98604/image_256/iPhone%2013" alt="iPhone 13" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
+      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="cash-badge" aria-hidden="true">51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 13">iPhone 13</h3>
@@ -421,7 +445,8 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 13 Pro Max"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98604/image_256/iPhone%2013" alt="iPhone 13 Pro Max" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
+      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="cash-badge" aria-hidden="true">51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 13 Pro Max">iPhone 13 Pro Max</h3>
@@ -441,7 +466,8 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 15"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98601/image_256/iPhone%2015" alt="iPhone 15" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
+      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="cash-badge" aria-hidden="true">51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 15">iPhone 15</h3>
@@ -461,7 +487,8 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 15 Pro"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98601/image_256/iPhone%2015" alt="iPhone 15 Pro" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
+      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="cash-badge" aria-hidden="true">51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 15 Pro">iPhone 15 Pro</h3>
@@ -481,7 +508,8 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 15 Pro Max"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98601/image_256/iPhone%2015" alt="iPhone 15 Pro Max" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
+      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="cash-badge" aria-hidden="true">51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 15 Pro Max">iPhone 15 Pro Max</h3>
@@ -501,7 +529,8 @@ src="https://www.facebook.com/tr?id=3997634023847682&ev=PageView&noscript=1"
     <button class="card-hit" aria-label="Ver iPhone 16 Pro Max"></button>
     <div class="img">
       <img src="https://www.macstation.com.ar/web/image/product.template/98593/image_256/iPhone%2016%20Pro" alt="iPhone 16 Pro Max" loading="lazy" />
-      <span class="off-badge" aria-hidden="true">Navidad · 51.8% OFF efectivo</span>
+      <span class="off-badge" aria-hidden="true">Navidad</span>
+      <span class="cash-badge" aria-hidden="true">51.8% OFF efectivo</span>
     </div>
     <div class="info">
       <h3 class="name" title="iPhone 16 Pro Max">iPhone 16 Pro Max</h3>
